# storasense-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  alarm02.puml  alrm02.1.puml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  index.html  justfile  old_docker-compose.yml  package-lock.json  pyproject.toml  sitemap.xml
.github/workflows/: docker-publish.yml  gh-pages.yml  pre-commit.yml  semantic-release.yml
Alarm-Service/: .gitignore  Dockerfile  build.gradle  settings.gradle
Alarm-Service/app/: build.gradle
Alarm-Service/config/: thresholds.json
Alarm-Service/gradle/wrapper/: gradle-wrapper.properties
Alarm-Service/src/main/resources/: log4j2.properties
alarm/: index.html
alarm-feat/: index.html
arc/: index.html
arduino/: index.html
auth/: index.html
backend/: README.md  index.html
backend/src/app/: Dockerfile  justfile  main.py  start.sh
backend/src/app/shared/: logging.py
backend/src/app/src/: activate_alarmsystem.py  db_init.py  main.py  seed.py  seed_dev.py  seed_prod.py
backend/src/mqtt-client/: Dockerfile
backend/src/mqtt-client/src/: database.py  main.py  mqtt_client.py  rest_client.py
backend/src/mqtt_client/: .env.example  Dockerfile  docker-compose.yml
backend/src/mqtt_client/src/: database.py  main.py  mqtt_client.py  rest_client.py
content/about/intro_goals/: index.html
content/arc/arc/: index.html
content/arc/components/alarm/: kafka_components.puml
content/arc/components/arduino/: index.html
content/arc/components/backend/: index.html
content/arc/components/mqtt-client/: index.html
content/arc/constraints/misc/: index.html
content/arc/constraints/techstack/: index.html
content/arc/data_eva/: index.html
content/audit/SFMEA/: index.html
content/audit/auth/: index.html
data_eva/: index.html
db-init/: db-init.sh  reset-app-db.sh  restore.sh
db-scripts/: README.md  db-init.sh  reset-app-db.sh
db-scripts/db-restore/: README.md  restore.ps1  restore.sh
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: MVP-Environment-Monitoring.md  alarm.md  arc.md  arduino.md  auth.md  backend.md  data.md  data_eva.md  index.md  intro_goals.md  misc.md  mqtt-client.md  mvp.md  old_data.md  reference.md  simulator.md  techstack.md  watchdog.md
docs/docs/content/about/: intro_goals.md
docs/docs/content/alarm/: alarm-feat.md  alarm.md
docs/docs/content/arc/: arc.md  auth.puml  data_eva.md
docs/docs/content/arc/components/: arduino.md  backend.md  mqtt-client.md
docs/docs/content/arc/components/alarm/: alarm.md  alrm02.1.puml
docs/docs/content/arc/constraints/: misc.md
docs/docs/content/audit/: SFMEA.md
docs/docs/images/arc/: ablauf01.puml  deployment.puml
docs/docs/images/data/: mongodb_overview.drawio  mongodb_overview_2.drawio
docs/docs/images/data_eva/: erd.dbml
frontend/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx  useAuthenticatedUser.ts  useKeycloak.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/auth/: KeycloakProvider.tsx  keycloakConfigurer.ts  useKeycloak.ts
frontend/src/components/: AuthenticationMessage.tsx  HomePageComponent.tsx  KeycloakProvider.tsx  ProtectedPage.tsx  Providers.tsx
frontend/src/components/context/: ActiveStorageRequired.tsx  AuthenticationRequired.tsx
frontend/src/redux/: store.ts
images/arc/: deployment.puml
images/data_eva/: erd.dbml
images/mqtt-client/: Programm_flow_diagram.drawio
intro_goals/: index.html
kafka/: Dockerfile  README.md
kafka/connectors/: README.md  mqtt-source-s1.json  mqtt-source-s2.json  mqtt-source-s3.json  mqtt-source-s4.json  mqtt-source-s5.json
kafka/kafka-connect-email-workshop/: README.md  build.sbt
kafka/scripts/: create-topics.sh
kafka/scripts/connectors/: apply-all.sh  loadConnector.sh  loadSinkConnector.sh  wait-for-connect.sh
kafka/scripts/topics/: create-topics.sh  wait-for-kafka.sh
misc/: index.html
mqtt-client/: index.html
mvp/: index.html
old_data/: index.html
search/: search_index.json
styles/: extra.css
techstack/: index.html
test/: index.html
test/availability/: Dockerfile  docker-compose.yaml  frontend_test.py  main.py  mqtt.py  rest_auth.py
test/integration/: Dockerfile  cleanup_database.py  entrypoint.sh  rest_test.py  test_methods.py
test/rest_functionality/: rest_auth.py  rest_methods.py
test/unit/repositories/: test_alarm_repository.py  test_analytics_repository.py  test_measurement_repository.py  test_sensor_repository.py  test_storage_repository.py  test_user_repository.py  test_user_storage_access_repository.py
test/unit/services/: test_alarm_service.py  test_analytics_service.py  test_auth_service.py  test_measurement_service.py  test_sensor_service.py  test_storage_service.py  test_user_service.py
(+118 files in other folders)
