[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Documentation for the project"
authors = []
package-mode= false

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-material-extensions = "^1.3.1"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
